add switch UI for test

--- a/apps/settings/locales/settings.en-US.properties
+++ b/apps/settings/locales/settings.en-US.properties
@@ -1241,6 +1241,7 @@ log-animations=Log Slow Animations
 remote-debugging-usb=Debugging via USB
 devtools-wifi=DevTools via Wi-Fi
 devtools-device-name=DevTools Wi-Fi Device Name
+presentation-api-discoverable=Presentation API Discoverable
 devtools-qps=Pseudo-Localization
 debugger-disabled=Disabled
 debugger-adb-only=ADB only
